# c0-cli

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
doc/: alter  c0-grammar  semantic-ref.md
public/: alter  c0-grammar  c0-grammar-basic
src/: core.h  main.cpp
src/analyser/: analyser.cpp  analyser.h  opg.cpp  opg.h  rdp.cpp  rdp.h
src/ast/: ast.cpp  ast.h  basic_ast.h  expr_ast.cpp  expr_ast.h  func_ast.h  root_ast.h  stmt_ast.cpp  stmt_ast.h  var_ast.h
src/ast/expr_ast/: arith_expr.h  basic_expr.h  cast_expr.h  cond_expr.h  expr.h  value_expr.h
src/ast/stmt_ast/: basic_stmt.h  cond_stmt.h  io_stmt.h  jmp_stmt.h  loop_stmt.h  stmt.h
src/ctx/: gen_ctx.cpp  gen_ctx.h  rt_ctx.cpp  rt_ctx.h  src_ctx.cpp  src_ctx.h
src/error/: basic_error.h  error.h  fatal.h  warning.h
src/instruction/: instruction.h
src/ist/: generator.cpp  generator.h  instruction.h
src/lexer/: lexer.cpp  lexer.h  token.h  utils.h
src/symtbl/: symbol.h  symtbl.cpp  symtbl.h
src/tools/: alias.h  ctx.cpp  ctx.h  enums.h  error.h  utils.h  warning.h
tests/: test_all.cpp  test_lexer.cpp
tests/semantic/: base1.c0  comment.in  cond.c0  double.c0  fib.in  func.c0  io.c0  loop1.c0  loop2.c0  scope1.c0  scope2.c0  sqrt.c0  switch.c0  type.c0  var.c0
tests/token/: base.in  char-string.in  comment.in  float.in  hex.in  key.in
toolchain/: c0-vm-cpp
